--- a/SideScroller/.classpath
+++ b/SideScroller/.classpath
@@ -2,25 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="ext/slick/lib/slick-util.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SideScroller/ext/slick"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl_util.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SideScroller/ext/slick"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SideScroller/ext/slick"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="ext/slick/lib/slick.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="SideScroller/ext/slick"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="ext/slick/lib/slick-util.jar"/>
+	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl_util.jar"/>
+	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl.jar"/>
+	<classpathentry kind="lib" path="ext/slick/lib/slick.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
