--- a/SideScroller/.classpath
+++ b/SideScroller/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="ext/slick/lib/slick-util.jar"/>
 	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl.jar"/>
-	<classpathentry kind="lib" path="ext/slick/lib/slick.jar"/>
+	<classpathentry kind="lib" path="ext/slick/lib/slick.jar" sourcepath="ext/slick/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
