--- a/SideScroller/.classpath
+++ b/SideScroller/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="ext/slick/lib/slick-util.jar"/>
+	<classpathentry kind="lib" path="ext/slick/lib/slick-util.jar" sourcepath="ext/slick/src"/>
 	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl_util.jar"/>
 	<classpathentry kind="lib" path="ext/lwjgl/jar/lwjgl.jar"/>
 	<classpathentry kind="lib" path="ext/slick/lib/slick.jar" sourcepath="ext/slick/src"/>
